# altv-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-release.bat  build.bat
src/: Utilities.hpp  WasmExports.hpp  WasmImport.cpp  WasmImport.hpp  WasmPtr.hpp  WasmResource.cpp  WasmResource.hpp  WasmRuntime.cpp  WasmRuntime.hpp  WasmStructs.hpp  main.cpp  main.hpp  resource.hpp  structs.hpp  test.cpp  util.hpp
wasm-structs-gen/: index.js  package.json
